name:                hakyll-blog
version:             0.1.0.0
synopsis:            jeoygin blog
description:         Please see README.md
homepage:            http://github.com/jeoygin/hakyll-blog
license-file:        LICENSE
author:              Jeoygin Wang
maintainer:          jeoygin@gmail.com
copyright:           Copyright: (c) 2016 Jeoygin Wang
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.22

executable site
  hs-source-dirs:      .
  main-is:             site.hs
  build-depends:       base,
                       hakyll,
                       pandoc
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jeoygin/hakyll-blog
