name:                hakyll-blog
version:             0.1.0.0
synopsis:            jeoygin.org blog
description:         Please see README.md
homepage:            http://github.com/jeoygin/hakyll-blog
license-file:        LICENSE
author:              Jeoygin Wang
maintainer:          jeoygin@gmail.com
copyright:           Copyright: (c) 2017 Jeoygin Wang
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable site
  hs-source-dirs:      src
  main-is:             site.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       hakyll,
                       pandoc
